# etrees

./: .gitignore  README.md  pyproject.toml
examples/: analyze_reduced_benchmark.py  benchmark_growth.py  hybrid_affine_search_demo.py  recover_native_expression.py  run_recovery_benchmark.py  run_reduced_benchmark.py  toy_espace_demo.py
src/etree/: __init__.py  ast.py  baselines.py  benchmark_registry.py  benchmarks.py  canonicalize.py  eval.py  features.py  generate.py  reduced_benchmark.py  search.py  utils.py
tests/: test_ast.py  test_baselines.py  test_benchmark_registry.py  test_benchmarks.py  test_canonicalize.py  test_eval.py  test_features.py  test_generate.py  test_reduced_benchmark.py  test_search.py
